@@ -1,4 +1,6 @@
 Verion 0.9.42-devcvs (?? ??? ????)
+  - Fixed bug 750044: add charset specification to translations which
+    will be sent as a meta tag for each page (if defined)
   - Added patch 654625: Added daily as an option for custom views
   - Fixed bug 756177, 644299: public access got "+" icon in month view
     when viewing non-user calendar in month view.
